# scrapeall

./: .gitignore  README.md  parse.py  pyproject.toml  setup.py  utils.py
.github/workflows/: python-package.yaml  release.yaml
examples/: config.yaml  run.py
scrapeall/: parse.py  utils.py
scripts/: run.py
