[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapeall"
dynamic = ["version"]
description = "Versatile web scraper for extracting data from both static HTML and JavaScript-rendered sites, using headless browsers for dynamic content."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Arun Ghimire", email = "thearunism@gmail.com" }
]
dependencies = [
  "pyppeteer==2.0.0",
  "beautifulsoup4==4.12.3",
  "requests==2.32.3",
  "omegaconf==2.3.0",
  "httpx>=0.28.1",
]

urls = { Homepage = "https://github.com/arunism/scrapeall" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["scrapeall*"]}}

[tool.setuptools.dynamic]
version = {attr = "scrapeall.__version__.__version__"}
