[tool.poetry]
name = "scrapeall"
version = "0.1.2"
description = "Versatile web scraper for extracting data from both static HTML and JavaScript-rendered sites, using headless browsers for dynamic content."
authors = ["arunism <arun.ghimire@olivegroup.io>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]


[tool.project.urls]
Homepage = "https://github.com/arunism/scrapeall/"
Repository = "https://github.com/arunism/scrapeall/"


[tool.poetry.dependencies]
python = "^3.10"
pyppeteer = "^2.0.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
omegaconf = "^2.3.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
